# simplewebgallery

./: Cargo.toml  Dockerfile  docker-compose.yml  genconf.sh  nginx.conf  nginx.config  readme.md
data/: advpicsite.sh  index.php  photos.php  script.js  style.css  vids.php  vidscript.js  vidsite.sh
src/: index.html  main.rs  script.js
static/: index.html  script.js  style.css
