[package]
name = "simplewebgallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0",features = ["derive"]}
serde_json = "1.0"
walkdir = "2"
actix = "0.13"
actix-web = "4"
actix-web-static-files = "4.0"
actix-files = "0.6"
static-files = "0.2.1"
env_logger = "0.10.0"
urlencoding = "2.1.3"
rand = "0.8.5"

[build-dependencies]
static-files = "0.2.1"
